force-app/main/default/objects/Case/fields/AccountInterne__c.field-meta.xml
<CustomField>
    <fullName>AccountInterne__c</fullName>
    <formula>Account.Interne__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountInterne</label>
    <type>Checkbox</type>
</CustomField>