force-app/main/default/objects/Case/fields/Adresse_destinataire__c.field-meta.xml
<CustomField>
    <fullName>Adresse_destinataire__c</fullName>
    <description>Adresse mail du destinataire pour différencier les adresses de Recouvrement - Retail dans les vues de liste</description>
    <formula>Source:EmailMessage.ToAddress</formula>
    <label>Adresse destinataire</label>
    <type>Text</type>
</CustomField>