force-app/main/default/objects/Case/fields/Age_openDays__c.field-meta.xml
<CustomField>
    <fullName>Age_openDays__c</fullName>
    <description>Ce champ calcule la durée entre l&apos;ouverture de la requête et la date d&apos;aujourd&apos;hui en jours ouvrés (5/7jours)</description>
    <formula>(5 * ( FLOOR( ( DATEVALUE(NOW()) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(NOW()) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <inlineHelpText>Ce champ calcule la durée entre l&apos;ouverture de la requête et la date d&apos;aujourd&apos;hui en jours ouvrés (5/7jours)</inlineHelpText>
    <label>Anciennecté (jours ouvrés)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>