force-app/main/default/objects/Case/fields/caseClosedByBatch__c.field-meta.xml
<CustomField>
    <fullName>caseClosedByBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>caseClosedByBatch</label>
    <type>Checkbox</type>
</CustomField>