force-app/main/default/objects/Case/fields/caseCreatedByBatch__c.field-meta.xml
<CustomField>
    <fullName>caseCreatedByBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>caseCreatedByBatch</label>
    <type>Checkbox</type>
</CustomField>