force-app/main/default/objects/Case/fields/CaseNotificationFormula__c.field-meta.xml
<CustomField>
    <fullName>CaseNotificationFormula__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))</formula>
    <label>CaseNotificationFormula</label>
    <type>Text</type>
</CustomField>