force-app/main/default/objects/Case/fields/Code_BER__c.field-meta.xml
<CustomField>
    <fullName>Code_BER__c</fullName>
    <formula>Contrat__r.BER__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code BER</label>
    <type>Text</type>
</CustomField>