force-app/main/default/objects/Case/fields/Code_statut_contrat__c.field-meta.xml
<CustomField>
    <fullName>Code_statut_contrat__c</fullName>
    <formula>Contrat__r.Code_statut_contrat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code statut contrat</label>
    <type>Text</type>
</CustomField>