force-app/main/default/objects/Case/fields/ContactFullName__c.field-meta.xml
<CustomField>
    <fullName>ContactFullName__c</fullName>
    <formula>IF( ISPICKVAL( Contact.Salutation , &apos;1&apos;) , &apos;Mr&apos;,
IF( ISPICKVAL( Contact.Salutation , &apos;2&apos;) , &apos;Ms&apos;,
IF( ISPICKVAL( Contact.Salutation , &apos;4&apos;) , &apos;Company&apos;,
&apos;&apos;
))) &amp; &quot; &quot; &amp; Contact.LastName &amp; &quot; &quot; &amp;  Contact.FirstName</formula>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>