force-app/main/default/objects/Case/fields/Contract_Offer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Offer</label>
    <referenceTo>DU_ContractOffer__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>