force-app/main/default/objects/Case/fields/Contrat_Numero__c.field-meta.xml
<CustomField>
    <fullName>Contrat_Numero__c</fullName>
    <formula>Contrat__r.Numero_de_contrat__c</formula>
    <label>Contrat_Numero</label>
    <type>Text</type>
</CustomField>