force-app/main/default/objects/Case/fields/Date_d_ch_ance__c.field-meta.xml
<CustomField>
    <fullName>Date_d_ch_ance__c</fullName>
    <label>Date d&apos;alerte</label>
    <type>Date</type>
</CustomField>