force-app/main/default/objects/Case/fields/Date_de_cloture_Easyphone__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cloture_Easyphone__c</fullName>
    <description>Date de clôture Easyphone</description>
    <label>Date de clôture Easyphone</label>
    <type>DateTime</type>
</CustomField>