force-app/main/default/objects/Case/fields/Date_de_derniere_modification__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derniere_modification__c</fullName>
    <label>Date de dernière modification</label>
    <type>Date</type>
</CustomField>