force-app/main/default/objects/Case/fields/Date_de_l_alerte__c.field-meta.xml
<CustomField>
    <fullName>Date_de_l_alerte__c</fullName>
    <formula>Contrat__r.Date_de_l_alerte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de l&apos;alerte</label>
    <type>Date</type>
</CustomField>