force-app/main/default/objects/Case/fields/Demandeur__c.field-meta.xml
<CustomField>
    <fullName>Demandeur__c</fullName>
    <description>Métier du demandeur de la requête</description>
    <label>Demandeur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avocat</fullName>
            </value>
            <value>
                <fullName>Notaire</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Protection juridique</fullName>
            </value>
            <value>
                <fullName>Association de consommateurs</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Co-contractant</fullName>
            </value>
            <value>
                <fullName>Hors réseau</fullName>
            </value>
            <value>
                <fullName>Médiateur</fullName>
            </value>
            <value>
                <fullName>Presse</fullName>
            </value>
            <value>
                <fullName>Prestataire</fullName>
            </value>
            <value>
                <fullName>Racheteur</fullName>
            </value>
            <value>
                <fullName>Réseau</fullName>
            </value>
            <value>
                <fullName>Terrain</fullName>
            </value>
            <value>
                <fullName>Tiers hors contrat</fullName>
            </value>
            <value>
                <fullName>VGF Direction</fullName>
            </value>
            <value>
                <fullName>VGF RC</fullName>
            </value>
            <value>
                <fullName>VWFS</fullName>
            </value>
            <value>
                <fullName>VWFS Direction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>