force-app/main/default/objects/Case/fields/DU_ChannelIcon__c.field-meta.xml
<CustomField>
    <fullName>DU_ChannelIcon__c</fullName>
    <description>CDM: Will be used to visualize through an icon the channel through which the case was logged (phone, web, e-mail).</description>
    <formula>CASE( Origin ,&quot;Web&quot;, &quot;💻&quot;,
&quot;Phone&quot;, &quot;📱&quot;,
&quot;Email&quot;,&quot;📧&quot;,
&quot;Email - Sales&quot;,&quot;📧&quot;,
&quot;Email - Service&quot;,&quot;📧&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Icon</label>
    <type>Text</type>
</CustomField>