force-app/main/default/objects/Case/fields/DU_ClosedInFirstContact__c.field-meta.xml
<CustomField>
    <fullName>DU_ClosedInFirstContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Indication that the case was solved upon the first contact for monitoring.</description>
    <label>Closed in first Contact</label>
    <type>Checkbox</type>
</CustomField>