force-app/main/default/objects/Case/fields/DU_ClosureCommentsByOwner__c.field-meta.xml
<CustomField>
    <fullName>DU_ClosureCommentsByOwner__c</fullName>
    <description>CDM: As part of case closure process, the case owner can make closing notes on the case.</description>
    <label>Closure Comments by Owner</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>