force-app/main/default/objects/Case/fields/DU_ClosureCommentsBySupervisor__c.field-meta.xml
<CustomField>
    <fullName>DU_ClosureCommentsBySupervisor__c</fullName>
    <description>CDM: As part of case closure process, a supervisor can make its own closing notes on the case.</description>
    <label>Closure Comments by Supervisor</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>