force-app/main/default/objects/Case/fields/DU_Complexity__c.field-meta.xml
<CustomField>
    <fullName>DU_Complexity__c</fullName>
    <description>CDM: Indicates the level of complexity of the case.</description>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>