force-app/main/default/objects/Case/fields/DU_Contract__c.field-meta.xml
<CustomField>
    <fullName>DU_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: This field holds the relationship between Case and Contract.</description>
    <label>Contract</label>
    <referenceTo>DU_Contract__c</referenceTo>
    <relationshipLabel>Cases (Contract)</relationshipLabel>
    <relationshipName>DU_CasesContract</relationshipName>
    <type>Lookup</type>
</CustomField>