force-app/main/default/objects/Case/fields/DU_CustomerMoment__c.field-meta.xml
<CustomField>
    <fullName>DU_CustomerMoment__c</fullName>
    <description>CDM: To be able to indicate where in the life cycle of the contract, the case has been logged. Depending on the customer moment, different case reasons may be chosen.</description>
    <label>Customer Moment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>BeforeDelivery</fullName>
                <label>Before Delivery</label>
            </value>
            <value>
                <fullName>OngoingContract</fullName>
                <label>Ongoing Contract</label>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>AfterTermination</fullName>
                <label>After Termination</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>