force-app/main/default/objects/Case/fields/DU_CustomerSatisfactionScore__c.field-meta.xml
<CustomField>
    <fullName>DU_CustomerSatisfactionScore__c</fullName>
    <description>CDM: Customer Satisfaction score for the case logged.</description>
    <label>Customer Satisfaction Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>