force-app/main/default/objects/Case/fields/DU_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>DU_ExternalID__c</fullName>
    <description>CDM: Holds an external ID for the case record from an external source system</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>