force-app/main/default/objects/Case/fields/DU_IsReopened__c.field-meta.xml
<CustomField>
    <fullName>DU_IsReopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Indication that a case has been re-opened after closing, for monitoring.</description>
    <label>Is Reopened</label>
    <type>Checkbox</type>
</CustomField>