force-app/main/default/objects/Case/fields/DU_Language__c.field-meta.xml
<CustomField>
    <fullName>DU_Language__c</fullName>
    <description>CDM: Case language so that automated answers are sent in the right language.</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_Language</valueSetName>
    </valueSet>
</CustomField>