force-app/main/default/objects/Case/fields/DU_LicensePlate__c.field-meta.xml
<CustomField>
    <fullName>DU_LicensePlate__c</fullName>
    <description>CDM: Webforms will create cases. All info captured in the forms needs to be stored on the cases, before processes can be initiated to link contracts, contract assets and assets to the case. Queries will be made on those objects using License plate.</description>
    <label>License Plate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>