force-app/main/default/objects/Case/fields/DU_PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>DU_PreferredLanguage__c</fullName>
    <description>CDM: Indicates the contacts preferred language.</description>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_Language</valueSetName>
    </valueSet>
</CustomField>