force-app/main/default/objects/Case/fields/DU_ResolutionDate__c.field-meta.xml
<CustomField>
    <fullName>DU_ResolutionDate__c</fullName>
    <description>CDM: Indication of when the Status of the Case was set to &quot;Solved&quot;.</description>
    <label>Resolution Date</label>
    <type>DateTime</type>
</CustomField>