force-app/main/default/objects/Case/fields/DU_ResolutionTime__c.field-meta.xml
<CustomField>
    <fullName>DU_ResolutionTime__c</fullName>
    <description>CDM: Computation of of the case resolution time for monitoring efficiency of servicing.</description>
    <formula>DU_ResolutionDate__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>