force-app/main/default/objects/Case/fields/DU_SubStatus__c.field-meta.xml
<CustomField>
    <fullName>DU_SubStatus__c</fullName>
    <description>CDM: To be able to keep the case path and statuses with a limited number of values, still being able to provide additional information on specific case statuses.</description>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMPTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>