force-app/main/default/objects/Case/fields/DU_SurveySent__c.field-meta.xml
<CustomField>
    <fullName>DU_SurveySent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Indication that a satisfaction survey has been sent for this case.</description>
    <label>Survey Sent</label>
    <type>Checkbox</type>
</CustomField>