force-app/main/default/objects/Case/fields/Duree_de_traitement__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_traitement__c</fullName>
    <formula>(5 * ( FLOOR( ( DATEVALUE(ClosedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(ClosedDate) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de traitement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>