force-app/main/default/objects/Case/fields/Equipe__c.field-meta.xml
<CustomField>
    <fullName>Equipe__c</fullName>
    <label>Equipe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acceptation Annexes</fullName>
            </value>
            <value>
                <fullName>ACCEPTATION B2C</fullName>
                <isActive>false</isActive>
                <label>ACCEPTATION B2C</label>
            </value>
            <value>
                <fullName>Acceptation Fleet Cellule Support</fullName>
            </value>
            <value>
                <fullName>Acceptation Fleet Transfert</fullName>
            </value>
            <value>
                <fullName>Acceptation Fleet VN</fullName>
            </value>
            <value>
                <fullName>Acceptation Fleet VO</fullName>
            </value>
            <value>
                <fullName>Acceptation Refinancement/transfert</fullName>
            </value>
            <value>
                <fullName>Acceptation Retail Vente en ligne</fullName>
            </value>
            <value>
                <fullName>Acceptation Retail VN</fullName>
            </value>
            <value>
                <fullName>Acceptation Retail VO</fullName>
            </value>
            <value>
                <fullName>Acceptation VGRF</fullName>
            </value>
            <value>
                <fullName>Acceptation VIP</fullName>
            </value>
            <value>
                <fullName>Acceptation VRGF</fullName>
                <isActive>false</isActive>
                <label>Acceptation VRGF</label>
            </value>
            <value>
                <fullName>CRC FLEET</fullName>
                <isActive>false</isActive>
                <label>CRC FLEET</label>
            </value>
            <value>
                <fullName>CRC retail</fullName>
                <isActive>false</isActive>
                <label>CRC retail</label>
            </value>
            <value>
                <fullName>Credit RESEAU</fullName>
                <isActive>false</isActive>
                <label>Credit RESEAU</label>
            </value>
            <value>
                <fullName>Crédit réseau 4 fois sans frais</fullName>
            </value>
            <value>
                <fullName>Crédit réseau affacturage VN</fullName>
            </value>
            <value>
                <fullName>Crédit réseau affacturage VO</fullName>
            </value>
            <value>
                <fullName>Crédit réseau annexe 1</fullName>
            </value>
            <value>
                <fullName>Crédit réseau compliance</fullName>
            </value>
            <value>
                <fullName>Crédit réseau comptabilité</fullName>
            </value>
            <value>
                <fullName>Crédit réseau double financement</fullName>
            </value>
            <value>
                <fullName>Crédit réseau Lamborghini</fullName>
            </value>
            <value>
                <fullName>Crédit réseau post traitement</fullName>
            </value>
            <value>
                <fullName>Crédit réseau PRA</fullName>
            </value>
            <value>
                <fullName>Crédit réseau RAC</fullName>
            </value>
            <value>
                <fullName>Fleet - Fins de contrat</fullName>
            </value>
            <value>
                <fullName>Fleet - Grands comptes</fullName>
            </value>
            <value>
                <fullName>Fleet - Partenaires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>