force-app/main/default/objects/Case/fields/Famille_ACPR__c.field-meta.xml
<CustomField>
    <fullName>Famille_ACPR__c</fullName>
    <label>Famille ACPR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mise en place</fullName>
            </value>
            <value>
                <fullName>Déblocage des fonds</fullName>
            </value>
            <value>
                <fullName>Refus d&apos;octroi de crédit</fullName>
            </value>
            <value>
                <fullName>Défaut ou mauvaise exécution d&apos;une opération</fullName>
            </value>
            <value>
                <fullName>Délais de traitement d&apos;une opération</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Conseil</fullName>
            </value>
            <value>
                <fullName>Non concerné</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>