force-app/main/default/objects/Case/fields/IsInterne__c.field-meta.xml
<CustomField>
    <fullName>IsInterne__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ alimenté par un workflow, qui recopie la valeur du champ Interne__c du compte associé</description>
    <label>IsInterne</label>
    <type>Checkbox</type>
</CustomField>