force-app/main/default/objects/Case/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <formula>TEXT(Contrat__r.Marque__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marque</label>
    <type>Text</type>
</CustomField>