force-app/main/default/objects/Case/fields/Montant_de_l_impay__c.field-meta.xml
<CustomField>
    <fullName>Montant_de_l_impay__c</fullName>
    <formula>Contrat__r.Impaye__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant de l’impayé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>