force-app/main/default/objects/Case/fields/Montant_solde_client__c.field-meta.xml
<CustomField>
    <fullName>Montant_solde_client__c</fullName>
    <formula>Contrat__r.Montant_solde_client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant solde client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>