force-app/main/default/objects/Case/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <label>Motif</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Equipe__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administratif</fullName>
            </value>
            <value>
                <fullName>Administratif RECVT</fullName>
            </value>
            <value>
                <fullName>Affacturage VN</fullName>
            </value>
            <value>
                <fullName>Affacturage VO</fullName>
            </value>
            <value>
                <fullName>Affaires spéciales</fullName>
            </value>
            <value>
                <fullName>Amiable</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Assistance outil</fullName>
            </value>
            <value>
                <fullName>Attestations contrat</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Banque de France</fullName>
            </value>
            <value>
                <fullName>Cession</fullName>
            </value>
            <value>
                <fullName>Changement sur client</fullName>
            </value>
            <value>
                <fullName>Changement sur dossier</fullName>
            </value>
            <value>
                <fullName>Commandes</fullName>
            </value>
            <value>
                <fullName>Compta/Règlements</fullName>
            </value>
            <value>
                <fullName>Contactez-nous</fullName>
            </value>
            <value>
                <fullName>Contentieux</fullName>
            </value>
            <value>
                <fullName>Contraventions</fullName>
            </value>
            <value>
                <fullName>Contre-proposition</fullName>
            </value>
            <value>
                <fullName>Délai de traitement</fullName>
            </value>
            <value>
                <fullName>Délai de traitement acceptation</fullName>
            </value>
            <value>
                <fullName>Délai de traitement contrat</fullName>
            </value>
            <value>
                <fullName>Demande de paiement RAC</fullName>
            </value>
            <value>
                <fullName>Demande de renseignements compta</fullName>
            </value>
            <value>
                <fullName>Demande de traitement</fullName>
            </value>
            <value>
                <fullName>Demande info</fullName>
            </value>
            <value>
                <fullName>Démarches carte grise</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
            <value>
                <fullName>Documents de cession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>