force-app/main/default/objects/Case/fields/N_Client__c.field-meta.xml
<CustomField>
    <fullName>N_Client__c</fullName>
    <formula>Account.Numero_client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° Client</label>
    <type>Text</type>
</CustomField>