force-app/main/default/objects/Case/fields/N_de_Dossier__c.field-meta.xml
<CustomField>
    <fullName>N_de_Dossier__c</fullName>
    <description>Numéro de contrat auquel est relié le case</description>
    <formula>Contrat_Numero__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de Dossier</label>
    <type>Text</type>
</CustomField>