force-app/main/default/objects/Case/fields/Nom_de_la_concession__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_la_concession__c</fullName>
    <formula>Contrat__r.Compte_concession_associe__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom de la concession (Partenaire)</label>
    <type>Text</type>
</CustomField>