force-app/main/default/objects/Case/fields/Nom_du_Vendeur__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_Vendeur__c</fullName>
    <formula>TEXT(Contrat__r.Contact_vendeur_associe__r.Salutation)+&apos; &apos;+Contrat__r.Contact_vendeur_associe__r.FirstName+&apos; &apos;+Contrat__r.Contact_vendeur_associe__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du Vendeur</label>
    <type>Text</type>
</CustomField>