force-app/main/default/objects/Case/fields/Nombre_d_impay_s__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_impay_s__c</fullName>
    <formula>Contrat__r.Nombre_d_impayes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d’impayés</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>