force-app/main/default/objects/Case/fields/Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Prestataire__c</fullName>
    <label>Prestataire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBP</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>Concilian</fullName>
            </value>
            <value>
                <fullName>Covea Fleet</fullName>
            </value>
            <value>
                <fullName>Dekra</fullName>
            </value>
            <value>
                <fullName>Diot</fullName>
            </value>
            <value>
                <fullName>Europ Assistance</fullName>
            </value>
            <value>
                <fullName>Icare</fullName>
            </value>
            <value>
                <fullName>LCL CB</fullName>
            </value>
            <value>
                <fullName>LCL chèques</fullName>
            </value>
            <value>
                <fullName>Macadam</fullName>
            </value>
            <value>
                <fullName>Michelin</fullName>
            </value>
            <value>
                <fullName>Monecam</fullName>
            </value>
            <value>
                <fullName>ODL</fullName>
            </value>
            <value>
                <fullName>Opteven</fullName>
            </value>
            <value>
                <fullName>Routage</fullName>
            </value>
            <value>
                <fullName>SVFS</fullName>
            </value>
            <value>
                <fullName>STVA</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>VGF</fullName>
            </value>
            <value>
                <fullName>VWFS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>